PUG-067: Corrige Partner;