@@ -1,6 +1,5 @@
 package com.pug.partner.presenter;
 
-import com.pug.geo.domain.vos.IbgeCode;
 import com.pug.partner.domain.vos.Cnpj;
 import com.pug.partner.infra.read.dtos.EntityView;
 import com.pug.partner.presenter.dtos.EntityCreateRequest;
@@ -11,6 +10,7 @@ import com.pug.partner.service.EntityReadService;
 import com.pug.partner.service.EntityService;
 import com.pug.partner.service.dtos.EntityCreateOrUpdateCommand;
 import com.pug.shared.domain.enums.DeleteKeys;
+import com.pug.shared.exceptions.AppValidationException;
 import com.pug.shared.presenter.dtos.DeleteResult;
 import com.pug.shared.presenter.dtos.UuidsRequest;
 import com.pug.shared.presenter.rest.ApiEnvelope;
@@ -32,55 +32,69 @@ import jakarta.ws.rs.core.Context;
 import jakarta.ws.rs.core.MediaType;
 import jakarta.ws.rs.core.Response;
 import jakarta.ws.rs.core.UriInfo;
+
 import java.net.URI;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
-/** REST resource for managing partner entities. */
+/**
+ * REST resource for managing partner entities.
+ */
 @ApplicationScoped
 @Path("/partners/entities")
 @Consumes(MediaType.APPLICATION_JSON)
 @Produces(MediaType.APPLICATION_JSON)
 public class EntityResource {
 
-  @Inject EntityService writeService;
-  @Inject EntityReadService readService;
+  @Inject
+  EntityService writeService;
+  @Inject
+  EntityReadService readService;
 
-  @Context UriInfo uri;
+  @Context
+  UriInfo uri;
 
   /**
    * Create a new entity.
    *
    * @param req the entity creation request
    * @return the response containing the created entity view
+   * @throws com.pug.shared.exceptions.DuplicateResourceException if an entity with the same CNPJ already exists.
+   * @throws AppValidationException                               if input validation fails (e.g., blank name, invalid CNPJ).
+   * @throws com.pug.shared.exceptions.ResourceNotFoundException  if the specified city does not exist.
    */
   @POST
   public Response create(@Valid EntityCreateRequest req) {
     var cmd =
-        new EntityCreateOrUpdateCommand(
-            req.name(), new Cnpj(req.cnpj()), req.address(), new IbgeCode(req.cityIbge()));
-    var created = writeService.save(cmd);
-    EntityResponse body = EntityPresenter.toResponse(readService.getViewById(created.getId()));
-    URI location = uri.getAbsolutePathBuilder().path(created.getId().toString()).build();
+            new EntityCreateOrUpdateCommand(
+                    req.cnpjString(), req.name(), req.cityIbgeString(), req.address());
+    var createdEntityDomain = writeService.save(cmd);
+    EntityResponse body = EntityPresenter.toResponse(readService.getViewById(createdEntityDomain.getId()));
+    URI location = uri.getAbsolutePathBuilder().path(createdEntityDomain.getId().toString()).build();
     return Response.created(location).entity(ApiEnvelope.created(body)).build();
   }
 
   /**
    * Update an existing entity.
    *
-   * @param id the entity ID
+   * @param id  the entity ID
    * @param req the entity update request
    * @return the response containing the updated entity view
+   * @throws com.pug.shared.exceptions.ResourceNotFoundException  if the Entity is not found.
+   * @throws com.pug.shared.exceptions.DuplicateResourceException if an entity with the same CNPJ already exists.
+   * @throws AppValidationException                               if input validation fails.
+   * @throws com.pug.shared.exceptions.ResourceNotFoundException  if the specified city does not exist.
    */
   @PUT
   @Path("/{id}")
-  public Response update(@PathParam("id") UUID id, @Valid EntityUpdateRequest req) {
+  public Response update(@PathParam("id") @UuidV7 UUID id, @Valid EntityUpdateRequest req) {
     var cmd =
-        new EntityCreateOrUpdateCommand(
-            req.name(), new Cnpj(req.cnpj()), req.address(), new IbgeCode(req.cityIbge()));
-    var updated = writeService.update(id, cmd);
-    EntityResponse body = EntityPresenter.toResponse(readService.getViewById(updated.getId()));
+            new EntityCreateOrUpdateCommand(
+                    req.cnpjString(), req.name(), req.cityIbgeString(), req.address());
+    var updatedEntityDomain = writeService.update(id, cmd);
+    EntityResponse body = EntityPresenter.toResponse(readService.getViewById(updatedEntityDomain.getId()));
     return Response.ok(ApiEnvelope.ok(body)).build();
   }
 
@@ -89,6 +103,7 @@ public class EntityResource {
    *
    * @param req the request containing the IDs to delete
    * @return the response containing the deletion result
+   * @throws com.pug.shared.exceptions.ReferencedEntityException if any entity is still referenced.
    */
   @DELETE
   public Response delete(@Valid UuidsRequest req) {
@@ -101,6 +116,7 @@ public class EntityResource {
    *
    * @param id the entity ID
    * @return the response containing the entity view
+   * @throws com.pug.shared.exceptions.ResourceNotFoundException if the Entity is not found.
    */
   @GET
   @Path("/{id}")
@@ -114,36 +130,38 @@ public class EntityResource {
    *
    * @param cnpjRaw the raw CNPJ string
    * @return the response containing the entity view
+   * @throws AppValidationException                              if the provided CNPJ is malformed.
+   * @throws com.pug.shared.exceptions.ResourceNotFoundException if the Entity is not found.
    */
   @GET
   @Path("/by-cnpj/{cnpj}")
   public Response getByCnpj(@PathParam("cnpj") String cnpjRaw) {
-    Cnpj cnpj = new Cnpj(cnpjRaw);
-    EntityResponse body = EntityPresenter.toResponse(readService.getViewByCnpj(cnpj.toString()));
+    Cnpj cnpjVO;
+    cnpjVO = new Cnpj(cnpjRaw);
+    EntityResponse body = EntityPresenter.toResponse(readService.getViewByCnpj(cnpjVO.toString()));
     return Response.ok(ApiEnvelope.ok(body)).build();
   }
 
   /**
    * List or search entities.
    *
-   * @param q optional search query
+   * @param q      optional search query
    * @param cityId optional city ID to filter by
    * @return the response containing the list of entity views
+   * @throws com.pug.shared.exceptions.ResourceNotFoundException if any associated city or other data is missing.
    */
   @GET
-  public Response listOrSearch(@QueryParam("q") String q, @QueryParam("cityId") UUID cityId) {
+  public Response listOrSearch(@QueryParam("q") String q, @QueryParam("cityId") @UuidV7 UUID cityId) { // Adicionado @UuidV7
+    List<EntityView> views;
     if (cityId != null) {
-      List<EntityView> views = readService.listViewsByCityId(cityId);
-      List<EntityResponse> body = views.stream().map(EntityPresenter::toResponse).toList();
-      return Response.ok(ApiEnvelope.ok(body)).build();
+      views = readService.listViewsByCityId(cityId);
+    } else if (!StringUtils.isEmpty(q)) {
+      views = readService.searchViews(q);
+    } else {
+      views = readService.listViews();
     }
-    if (!StringUtils.isEmpty(q)) {
-      List<EntityView> views = readService.searchViews(q);
-      List<EntityResponse> body = views.stream().map(EntityPresenter::toResponse).toList();
-      return Response.ok(ApiEnvelope.ok(body)).build();
-    }
-    List<EntityView> all = readService.listViews();
-    List<EntityResponse> body = all.stream().map(EntityPresenter::toResponse).toList();
+
+    List<EntityResponse> body = views.stream().map(EntityPresenter::toResponse).collect(Collectors.toList());
     return Response.ok(ApiEnvelope.ok(body)).build();
   }
 }
