@@ -6,7 +6,7 @@ import com.pug.identity.service.PasswordService;
 import com.pug.identity.service.dtos.AccountCreateCommand;
 import com.pug.identity.service.dtos.AccountUpdateCommand;
 import com.pug.identity.service.dtos.UserCreateOrUpdateCommand;
-import com.pug.partner.domain.vos.Cnpj;
+import com.pug.partner.domain.Staff;
 import com.pug.partner.infra.read.dtos.StaffView;
 import com.pug.partner.presenter.dtos.StaffCreateBulkRequest;
 import com.pug.partner.presenter.dtos.StaffCreateRequest;
@@ -20,6 +20,7 @@ import com.pug.partner.service.dtos.StaffCreateCommand;
 import com.pug.partner.service.dtos.StaffUpdateCommand;
 import com.pug.shared.domain.enums.AccountType;
 import com.pug.shared.domain.enums.DeleteKeys;
+import com.pug.shared.exceptions.AppValidationException;
 import com.pug.shared.i18n.I18n;
 import com.pug.shared.presenter.dtos.BulkCreateResult;
 import com.pug.shared.presenter.dtos.DeleteResult;
@@ -31,7 +32,6 @@ import com.pug.shared.validation.UuidV7;
 import jakarta.enterprise.context.ApplicationScoped;
 import jakarta.inject.Inject;
 import jakarta.validation.Valid;
-import jakarta.validation.constraints.NotNull;
 import jakarta.ws.rs.Consumes;
 import jakarta.ws.rs.DELETE;
 import jakarta.ws.rs.GET;
@@ -46,26 +46,36 @@ import jakarta.ws.rs.core.HttpHeaders;
 import jakarta.ws.rs.core.MediaType;
 import jakarta.ws.rs.core.Response;
 import jakarta.ws.rs.core.UriInfo;
+
 import java.net.URI;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
-/** REST resource for managing partner staff. */
+/**
+ * REST resource for managing partner staff.
+ */
 @ApplicationScoped
 @Path("/partners/staff")
 @Consumes(MediaType.APPLICATION_JSON)
 @Produces(MediaType.APPLICATION_JSON)
 public class StaffResource {
 
-  @Inject StaffService writeService;
-  @Inject StaffReadService readService;
-  @Inject PasswordService passwordService;
-  @Inject I18n i18n;
+  @Inject
+  StaffService writeService;
+  @Inject
+  StaffReadService readService;
+  @Inject
+  PasswordService passwordService;
+  @Inject
+  I18n i18n;
 
-  @Context UriInfo uri;
-  @Context HttpHeaders headers;
+  @Context
+  UriInfo uri;
+  @Context
+  HttpHeaders headers;
 
   /**
    * Picks the best matching locale from the request headers.
@@ -98,25 +108,29 @@ public class StaffResource {
   @GET
   public Response list() {
     List<StaffResponse> list =
-        readService.listViews().stream()
-            .map(v -> StaffPresenter.toResponse(v, locale(), i18n))
-            .toList();
+            readService.listViews().stream()
+                    .map(v -> StaffPresenter.toResponse(v, locale(), i18n))
+                    .collect(Collectors.toList());
     return Response.ok(ApiEnvelope.ok(BulkCreateResult.of(list))).build();
   }
 
   /**
    * Retrieves staff members by their CPF.
    *
-   * @param rawCpf the CPF of the staff members
+   * @param cpfRaw the CPF of the staff members
    * @return a Response containing the staff members details
+   * @throws AppValidationException                              if the provided CPF is malformed.
+   * @throws com.pug.shared.exceptions.ResourceNotFoundException if no staff member is found.
    */
   @GET
   @Path("by-cpf/{cpf}")
-  public Response getByCpf(@PathParam("cpf") String rawCpf) {
-    var list =
-        readService.listViewsByCpf(new Cpf(rawCpf).toString()).stream()
-            .map(v -> StaffPresenter.toResponse(v, locale(), i18n))
-            .toList();
+  public Response getByCpf(@PathParam("cpf") String cpfRaw) {
+    Cpf cpfVO;
+    cpfVO = new Cpf(cpfRaw);
+    List<StaffResponse> list =
+            readService.listViewsByCpf(cpfVO.toString()).stream()
+                    .map(v -> StaffPresenter.toResponse(v, locale(), i18n))
+                    .collect(Collectors.toList());
     return Response.ok(ApiEnvelope.ok(BulkCreateResult.of(list))).build();
   }
 
@@ -125,6 +139,8 @@ public class StaffResource {
    *
    * @param rawEmail the email address of the staff member
    * @return a Response containing the staff member details
+   * @throws AppValidationException                              if the provided email is malformed.
+   * @throws com.pug.shared.exceptions.ResourceNotFoundException if no staff member is found.
    */
   @GET
   @Path("by-email")
@@ -132,7 +148,9 @@ public class StaffResource {
     if (StringUtils.isEmpty(rawEmail)) {
       return list();
     }
-    StaffView v = readService.getViewByEmail(new Email(rawEmail).toString());
+    Email emailVO;
+    emailVO = new Email(rawEmail);
+    StaffView v = readService.getViewByEmail(emailVO.toString());
     StaffResponse out = StaffPresenter.toResponse(v, locale(), i18n);
     return Response.ok(ApiEnvelope.ok(out)).build();
   }
@@ -151,9 +169,9 @@ public class StaffResource {
     }
 
     List<StaffResponse> list =
-        readService.search(query).stream()
-            .map(v -> StaffPresenter.toResponse(v, locale(), i18n))
-            .toList();
+            readService.search(query).stream()
+                    .map(v -> StaffPresenter.toResponse(v, locale(), i18n))
+                    .collect(Collectors.toList());
 
     return Response.ok(ApiEnvelope.ok(BulkCreateResult.of(list))).build();
   }
@@ -163,14 +181,16 @@ public class StaffResource {
    *
    * @param entityId the UUID of the entity
    * @return a Response containing a list of staff members for the entity
+   * @throws com.pug.shared.exceptions.ResourceNotFoundException if the entity is not found
+   *                                                             (propagated from service).
    */
   @GET
   @Path("by-entity/{entityId}")
   public Response listByEntity(@PathParam("entityId") @UuidV7 UUID entityId) {
     List<StaffResponse> list =
-        readService.listViewsByEntityId(entityId).stream()
-            .map(v -> StaffPresenter.toResponse(v, locale(), i18n))
-            .toList();
+            readService.listViewsByEntityId(entityId).stream()
+                    .map(v -> StaffPresenter.toResponse(v, locale(), i18n))
+                    .collect(Collectors.toList());
 
     return Response.ok(ApiEnvelope.ok(BulkCreateResult.of(list))).build();
   }
@@ -178,22 +198,22 @@ public class StaffResource {
   /**
    * Creates a new staff member.
    *
-   * @param req the request containing staff member details
-   * @param entityCnpj the CNPJ of the associated entity
-   * @return a Response containing the created staff member details
+   * @param req the request containing staff member details.
+   * @return a Response containing the created staff member details.
+   * @throws com.pug.shared.exceptions.DuplicateResourceException if a staff member with the same account ID already exists.
+   * @throws AppValidationException                               if input validation fails (e.g., blank/invalid CPF, email, etc.).
+   * @throws com.pug.shared.exceptions.ResourceNotFoundException  if the associated entity is not found.
    */
   @POST
-  public Response create(@Valid StaffCreateRequest req, @Valid @NotNull String entityCnpj) {
-    var cmd =
-        new StaffCreateCommand(
-            new AccountCreateCommand(
-                new UserCreateOrUpdateCommand(new Cpf(req.cpf()), req.name()),
-                new Email(req.email()),
-                AccountType.PARTNER,
-                passwordService.hash(req.password())),
-            new Cnpj(entityCnpj));
+  public Response create(@Valid StaffCreateRequest req) {
+    String hashedPassword = passwordService.hash(req.password());
 
-    var staff = writeService.save(cmd);
+    UserCreateOrUpdateCommand userCmd = new UserCreateOrUpdateCommand(req.cpfString(), req.name());
+    AccountCreateCommand accountCmd = new AccountCreateCommand(req.emailString(), AccountType.PARTNER, hashedPassword, userCmd);
+    StaffCreateCommand staffCmd = new StaffCreateCommand(req.entityCnpjString(), accountCmd);
+
+    Staff staff = writeService.save(staffCmd);
+
     StaffView v = readService.getViewById(staff.getAccountId());
     StaffResponse out = StaffPresenter.toResponse(v, locale(), i18n);
 
@@ -205,31 +225,32 @@ public class StaffResource {
   /**
    * Creates multiple staff members in bulk.
    *
-   * @param reqs the list of requests containing staff member details
-   * @return a Response containing the result of the bulk creation
+   * @param reqs the list of requests containing staff member details.
+   * @return a Response containing the result of the bulk creation.
+   * @throws com.pug.shared.exceptions.DuplicateResourceException if any staff member with the same account ID already exists.
+   * @throws AppValidationException                               if input validation fails for any staff in the bulk.
+   * @throws com.pug.shared.exceptions.ResourceNotFoundException  if any associated entity is not found.
    */
   @POST
   @Path("bulk")
   public Response createBulk(@Valid List<StaffCreateBulkRequest> reqs) {
-    var cmds =
-        reqs.stream()
-            .map(
-                r ->
-                    new StaffCreateBulkCommand(
-                        r.staffCreateRequests().stream()
-                            .map(
-                                acmd ->
-                                    new AccountCreateCommand(
-                                        new UserCreateOrUpdateCommand(
-                                            new Cpf(acmd.cpf()), acmd.name()),
-                                        new Email(acmd.email()),
-                                        AccountType.PARTNER,
-                                        passwordService.hash(acmd.password())))
-                            .toList(),
-                        new Cnpj(r.entityCnpj())))
-            .toList();
+    List<StaffCreateBulkCommand> cmds =
+            reqs.stream()
+                    .map(
+                            bulkReq ->
+                                    new StaffCreateBulkCommand(
+                                            bulkReq.entityCnpjString(),
+                                            bulkReq.staffCreateRequests().stream()
+                                                    .map(
+                                                            acmd -> {
+                                                              String hashedPassword = passwordService.hash(acmd.password());
+                                                              UserCreateOrUpdateCommand userCmd = new UserCreateOrUpdateCommand(acmd.cpfString(), acmd.name());
+                                                              return new AccountCreateCommand(acmd.emailString(), AccountType.PARTNER, hashedPassword, userCmd);
+                                                            })
+                                                    .collect(Collectors.toList())))
+                    .collect(Collectors.toList());
 
-    var staffList = writeService.saveAll(cmds);
+    List<Staff> staffList = writeService.saveAll(cmds);
 
     return Response.ok(ApiEnvelope.ok(BulkCreateResult.sizeOnly(staffList.size()))).build();
   }
@@ -237,23 +258,25 @@ public class StaffResource {
   /**
    * Updates an existing staff member.
    *
-   * @param id the UUID of the staff member to update
-   * @param req the request containing updated staff member details
-   * @return a Response containing the updated staff member details
+   * @param id  the UUID of the staff member's account to update.
+   * @param req the request containing updated staff member details.
+   * @return a Response containing the updated staff member details.
+   * @throws com.pug.shared.exceptions.ResourceNotFoundException  if the staff member does not exist.
+   * @throws com.pug.shared.exceptions.DuplicateResourceException if an admin with the updated email/CPF already exists.
+   * @throws AppValidationException                               if input validation fails.
    */
   @PUT
   @Path("{id}")
   public Response update(@PathParam("id") @UuidV7 UUID id, @Valid StaffUpdateRequest req) {
+    String hashedPassword = req.password() != null ? passwordService.hash(req.password()) : null;
 
-    var cmd =
-        new StaffUpdateCommand(
-            new AccountUpdateCommand(
-                new Email(req.email()),
-                req.password(),
-                new UserCreateOrUpdateCommand(new Cpf(req.cpf()), req.name())));
+    UserCreateOrUpdateCommand userCmd = new UserCreateOrUpdateCommand(req.cpfString(), req.name());
+    AccountUpdateCommand accountCmd = new AccountUpdateCommand(req.emailString(), hashedPassword, userCmd);
+    StaffUpdateCommand staffCmd = new StaffUpdateCommand(req.entityCnpjString(), accountCmd);
 
-    var updated = writeService.update(id, cmd);
-    StaffView v = readService.getViewById(updated.getAccountId());
+    Staff updatedStaff = writeService.update(id, staffCmd);
+
+    StaffView v = readService.getViewById(updatedStaff.getAccountId());
     StaffResponse out = StaffPresenter.toResponse(v, locale(), i18n);
 
     return Response.ok(ApiEnvelope.ok(out)).build();
@@ -262,8 +285,9 @@ public class StaffResource {
   /**
    * Deletes staff members by their unique identifiers.
    *
-   * @param req the request containing the list of staff member IDs to delete
-   * @return a Response containing the result of the deletion
+   * @param req the request containing the list of staff member IDs to delete.
+   * @return a Response containing the result of the deletion.
+   * @throws com.pug.shared.exceptions.ReferencedEntityException if any associated account is still referenced.
    */
   @DELETE
   public Response delete(@Valid UuidsRequest req) {
